--- a/app/views/issues/_cc_addresses.html.erb
+++ b/app/views/issues/_cc_addresses.html.erb
@@ -10,10 +10,12 @@
   <p><strong><%= l(:field_cc_addresses) %></strong></p>
   <%= render :partial => 'issues/cc_addresses/list', :locals => {:issue => @issue} %>
 
-  <% remote_form_for(:new_address, @cc_address, 
+  <%= form_for @issue.cc_addresses, {
+       :as => :new_address, :remote => true,
        :url => {:controller => :cc_addresses, :action => :create, :issue_id => @issue },
        :method => :post,
-       :html => {:id => 'new-cc-address-form', :style => (@cc_address ? '' : 'display: none;')}) do |f| %>
+       :html => {:id => 'new-cc-address-form', :style => (@cc_address ? '' : 'display: none;')}
+       } do |f| %>
     <%= render :partial => 'issues/cc_addresses/form', :locals => { :f => f, :issue_id => @issue }%>
   <% end %>
 </div>
